# sistema-segnalazione-treni

./: .gitignore  CMakeLists.txt  README.md  test-output-1.txt  test-output-2.txt
src/: main.cpp
src/Stazione/: Stazione.cpp  Stazione.h
src/Stazione/StazioneLocale/: StazioneLocale.cpp  StazioneLocale.h
src/Stazione/StazionePrincipale/: StazionePrincipale.cpp  StazionePrincipale.h
src/Timetable/: Timetable.cpp  Timetable.h
src/TorreDiControllo/: TorreDiControllo.cpp  TorreDiControllo.h
src/Treno/: Treno.cpp  Treno.h
src/Treno/TrenoAV/: TrenoAV.h
src/Treno/TrenoAVS/: TrenoAVS.h
src/Treno/TrenoR/: TrenoR.h
src/config/: config.h
src/data/: line_description.txt  line_description_1.txt  timetables.txt  timetables_1.txt  timetables_2.txt  timetables_3.txt
